Public version of my battle-game projekt